--- a/ot_homework_kimdohyung/src/App.css
+++ b/ot_homework_kimdohyung/src/App.css
@@ -15,19 +15,19 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(20px );
+  font-size: 20px ;
   color: white;
 }
 
 /* 제목 글자 타입설정 */
 .title-text{
-  font-size: calc(30px );
+  font-size: 30px ;
   font: bold;
   color: white;
 }
 
 .main-text{
-  font-size: calc(50px );
+  font-size: 50px ;
   font: bold;
   color: white;
 }
